testsuite/poke.pkl/gt-functions-diag-2.pk
/* { dg-do compile } */

var a =
  openproc > /* { dg-error "invalid operand.*\n.*expected integral, string or offset" } */
  openproc;
